Auditoriums add bulk api & Template Excel File
